<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="button_confirm">Confirm</string>
    <string name="button_cancle">Cancel</string>
    <string name="button_return">Return</string>
    <string name="app_name">YTReader</string>
    <string name="document">Documents</string>
    <string name="recent">Recent</string>
    <string name="loading">Loading data...</string>
    <string name="no_media_warning">Storage Media not present</string>
    <string name="no_media_hint">Please check your storage media.</string>
    <string name="open_failed">Unable to open document</string>
    <string name="cancel">Cancel</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title">MuPDF</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter Password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching...</string>
    <string name="link_control">Link highlighting and enabling</string>
    <string name="home">Home</string>
    <string name="reading">Reading</string>
    <string name="recently">Recently Read</string>
    <string name="more">More</string>
    <string name="bibliography">Bibliography</string>
    <string name="bookcase">Bookcase</string>
    <string name="untitled">Untitled</string>
    <string name="ebookcase">Bookcase</string>
    <string name="allbooks">All of My Books</string>
    <string name="books">Books</string>
    <string name="files">My Files</string>
    <string name="mrecent">Most Recent</string>
    <string name="title">Title</string>
    <string name="filetype">FileType</string>
    <string name="author">Author</string>
    <string name="option_content">Content</string>
    <string name="option_find">Find</string>
    <string name="option_goto">Go To</string>
    <string name="option_text">Text</string>
    <string name="page">Page</string>
    <string name="of">Of</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="proinfor">Product Information</string>
    <string name="langSet">Language Settings</string>
    <string name="network">Network</string>
    <string name="screen">Screen</string>
    <string name="pageTurn">Page Turn</string>
    <string name="pageTurnNo">No Animation</string>
    <string name="pageTurnCurl">Curl Flip</string>
    <string name="timeAndrDate">Time/Date</string>
    <string name="connectUsb">Connect the USB</string>
    <string name="font">Font</string>
    <string name="recovery">Restore The Factory Settings</string>
    <string name="company">Company</string>
    <string name="companyName">Ying Tang , Shenzhen City Digital Electric Co., Ltd.</string>
    <string name="model">Model</string>
    <string name="modelName">BNRV300</string>
    <string name="cpu">CPU</string>
    <string name="cpuName">RK2918</string>
    <string name="version">Version</string>
    <string name="versionName">1.1.0</string>
    <string name="battery">Battery</string>
    <string name="batteryName">Have used power</string>
    <string name="sd">SD Card</string>
    <string name="available">available</string>
    <string name="avaStore">Available Storage</string>
    <string name="zh">Simplified Chinese</string>
    <string name="en">English</string>
    <string name="horver">Horizontal/Vertical</string>
    <string name="screenSwitching">portrait and landscape screen</string>
    <string name="horScreen">Horizontal</string>
    <string name="verScreen">Vertical</string>
    <string name="toEnter">To enter the delay before the screen saver</string>
    <string name="oneMin">1 minutes</string>
    <string name="twoMin">2 minutes</string>
    <string name="fiveMin">5 minutes</string>
    <string name="fifthMin">15 minutes</string>
    <string name="onehour">1 hour</string>
    <string name="screenOut">Screen Timeout:</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="wifi">WI-FI</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="secured">Secured With</string>
    <string name="conssid">Connect to </string>
    <string name="signstr">Signal Strength</string>
    <string name="good">Good</string>
    <string name="connectfails">Connection fails</string>
    <string name="weak">Weak</string>
    <string name="no">NO</string>
    <string name="security">Security</string>
    <string name="wifipassword">Input Password</string>
    <string name="showpwd">Show Password</string>
    <string name="hidepwd">Hide Password</string>
    <string name="connect">Connect</string>
    <string name="info">info for</string>
    <string name="status">Status:</string>
    <string name="speed">Speed:</string>
    <string name="singnal">Singnal Strength:</string>
    <string name="ip">IP address:</string>
    <string name="securityw">Security:</string>
    <string name="forget">Forget</string>
    <string name="connecting">Connecting....</string>
    <string name="connfials">Connection failed to check the password is correct </string>
    <string name="nearNet">Near the network </string>
    <string name="setDateAndTime">Set the date / time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="fonts">Fonts</string>
    <string name="delfile">Delete Files</string>
    <string name="delfile_content">Sure you want to delete the file?</string>
    <string name="determine">Determine</string>
    <string name="selfile">Select File</string>
    <string name="selfile_content">select file to delete</string>
    <string name="delfile_fail">Failure</string>
    <string name="delfile_failContent">Delete file failed</string>
    <string name="fileerror">Open file error!</string>
    <string name="bookmark_exist">Bookmark is already exist!</string>
    <string name="bookmark_added">Bookmark is added!</string>
    <string name="content_title">Contents</string>
    <string name="content_bookmark">Bookmarks</string>
    <string name="content_chapter">Chapters</string>
    <string name="content_clearall">Clear all</string>
    <string name="content_page">page %1$d of %2$d</string>
    <string name="content_nobookmark">No bookmarks.</string>
    <string name="content_nochapter">No chapters.</string>
    <string name="content_clearconfirm">Sure to delete all?</string>
    <string name="find_title">Find</string>
    <string name="find_search">Search</string>
    <string name="find_searchhint">Enter words to find</string>
    <string name="find_noresult">No search results.</string>
    <string name="find_progress">Searching, please wait...</string>
    <string name="open_progress">Opening, please wait...</string>
    <string name="goto_goback">Go back</string>
    <string name="goto_gopage">Go to page</string>
    <string name="goto_go">Go</string>
    <string name="goto_enter">Enter page/loc: %1$d to %2$d</string>
    <string name="goto_enter2">Enter percent: 0 ~ 100</string>
    <string name="text_size">Size</string>
    <string name="text_font">Font</string>
    <string name="text_spacing">Line spacing</string>
    <string name="text_default">System default:</string>
    <string name="text_margin">Margins</string>
    <string name="scanwifi">Being scanned wifi</string>
    <string name="removeFile">Remove Files</string>
    <string name="removeFileSucc"> Clear Recently Read?</string>
    <string name="recoverySucc">Restore the factory success</string>
    <string name="recoveryFailed">Failed to restore the factory</string>
    <string name="recoverySet">Determine restore factory settings?</string>
    <string name="upperLevel">Upper Level</string>
    <string name="entering">Entering please wait......</string>
    <string name="nosd">Sd card not found</string>
    <string name="nostorage">Found no storage space</string>
    <string name="scanningsd">Loading file later open</string>
    <string name="not_supported_file">Not supported file!</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="screensavers">ScreenSavers</string>
    <string name="first_page">The first page</string>
    <string name="last_page">The last page</string>
    <string name="last_searchResult">No more search results</string>
</resources>