<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="129dp"
    android:layout_height="wrap_content"
    android:background="@drawable/book_check_1"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/mrecent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="2dp"
        android:text="@string/mrecent"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="2dp"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/filetype"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/filetype"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

</LinearLayout>