<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/optionMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/option_menu_bg_left"
            android:drawableTop="@drawable/content"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/option_content"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/option_menu_bg_middle"
            android:drawableTop="@drawable/find"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/option_find"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/go_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/option_menu_bg_middle"
            android:drawableTop="@drawable/go_to"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/option_goto"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/option_menu_bg_right"
            android:drawableTop="@drawable/text"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/option_text"
            android:textColor="@android:color/black" />
    </LinearLayout>

</RelativeLayout>