<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <!-- 头部开始 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="7dp" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="8dp"
                android:src="@drawable/settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:text="@string/settings"
                android:textColor="@android:color/black"
                android:textSize="24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/connectback"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:paddingRight="20dp"
                android:paddingTop="3dp"
                android:src="@drawable/back1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="5dp" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/thick_line_h" >
    </LinearLayout>
    <!-- 头部结束 -->
    <!-- 网络连接开始 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >
        <TextView
            android:id="@+id/aboutconssid"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingTop="10dp"
            android:textColor="@android:color/black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/status"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/speed"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/singnal"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/securityw"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/ip"
                android:textColor="@android:color/black"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/singnal"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/securityw"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/ip"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textColor="@android:color/black"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/forget"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_search"
            android:gravity="center"
            android:text="@string/forget"
            android:textSize="12dp"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>